--- a/src/pages/loginPage/loginArea/loginContent/LoginContent.css
+++ b/src/pages/loginPage/loginArea/loginContent/LoginContent.css
@@ -1,7 +1,7 @@
 .login-content {
     width: 300px;
     height: 300px;
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 10px;
-    background-color: white;
+    background-color: rgb(235, 235, 235);
 }
