--- a/src/generalComponents/modalComponent/ModalComponent.css
+++ b/src/generalComponents/modalComponent/ModalComponent.css
@@ -3,13 +3,13 @@
     /* width: 500px; */
     height: 50px;
     border-radius: 10px;
-    background-color: blue;
+    background-color: #E1E100;
 }
 
 .modal-modal-title-text {
     display: flex;
     justify-content: center;
-    color: white;
+    color: black;
     font-size: 24px;
 }
 
