--- a/src/pages/mainPage/header/headerContainer/navSection/navBar/NavBar.css
+++ b/src/pages/mainPage/header/headerContainer/navSection/navBar/NavBar.css
@@ -17,14 +17,14 @@
 .burger-bar {
     width: 100%;
     height: 7px;
-    background-color: blue;
+    background-color: #E1E100;
     border-radius: 5px;
 }
 
 .menu {
     width: 280px;
     height: 100vh;
-    background-color: blue;    
+    background-color: #E1E100;    
 }
 
 .logo-nav-bar {
