refactor(SideBar): change side bar menu, add icons, remove unneccessary components

--- a/src/pages/mainPage/header/headerContainer/userSection/logoutContainer/LogoutContainer.css
+++ b/src/pages/mainPage/header/headerContainer/userSection/logoutContainer/LogoutContainer.css
@@ -1,8 +1,8 @@
 .logout {
-    display: flex;
-    height: 30px;
+    height: 100%;
 }
 
 .logout > img {
-    width: 25px;
+    width: 35px;
+    cursor: pointer;
 }
