feat(ChangeStation): connect interface with opening modal

--- a/src/pages/stationsGroupPage/stationPage/changeStation/ChangeStation.css
+++ b/src/pages/stationsGroupPage/stationPage/changeStation/ChangeStation.css
@@ -1,8 +1,8 @@
-.change-fuel-type-buttons {
+.change-station-buttons {
     display: flex;
     margin-top: 25px;
 }
 
-.change-fuel-type-error-text {
+.change-station-error-text {
     color: red;
 }
