feat(ChangeStationFuelPrices): create fuel prices change interface with warning modal before doing change

--- a/src/pages/fuelPricesPage/stationsGroupFuelPrices/changeStationFuelPrices/ChangeStationFuelPrices.css
+++ b/src/pages/fuelPricesPage/stationsGroupFuelPrices/changeStationFuelPrices/ChangeStationFuelPrices.css
@@ -1,8 +1,5 @@
-.change-station-buttons {
+.change-station-fuel-prices-buttons {
     display: flex;
-    margin-top: 25px;
-}
-
-.change-station-error-text {
-    color: red;
+    justify-content: center;
+    margin-top: 50px;
 }
