--- a/src/pages/loginPage/loginArea/forgotPassword/forgotPasswordBody/ForgotPasswordBody.css
+++ b/src/pages/loginPage/loginArea/forgotPassword/forgotPasswordBody/ForgotPasswordBody.css
@@ -1,3 +1,8 @@
+.change-pass-body-btns {
+    display: flex;
+    margin-top: 15px;
+}
+
 .forgot-password-success-send-email {
     color: green;
 }
