fix(SideBar): change SIdeBar styles and add images for selected li item

--- a/src/generalComponents/sideBar/SideBar.css
+++ b/src/generalComponents/sideBar/SideBar.css
@@ -1,5 +1,6 @@
 .ant-menu-item-selected {
-    background-color: #40CBE1 !important;
+    background-color: black !important;
+    /* background-color: #40CBE1 !important; */
 }
 
 .ant-layout-sider {
